k8s/appmesh/app-namespace.yaml
# Create a Kubernetes namespace for your application:
apiVersion: v1
kind: Namespace
metadata:
  name: my-app
